--- a/.env
+++ b/.env
@@ -1,2 +1,7 @@
 # General
 REACT_APP_NAME=MedChain
+
+# Theme
+REACT_APP_THEME_PRIMARY_COLOR=blue
+REACT_APP_THEME_SECONDARY_COLOR=grey
+REACT_APP_THEME_TYPE=light
